Fix menu align

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -4,11 +4,13 @@
 
   &__logo {
     width: 100%;
+    margin: 1rem;
 
     &--first-name {
       font-size: 1.5em;
       line-height: 1em;
       display: inline-block;
+
     }
 
     &--name {
